--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@firebase/firestore": "^3.10.1",
@@ -12,6 +13,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.20.0",
     "firestore": "^1.1.6",
     "react": "^18.2.0",
